mysql/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: database
  labels:
    app: mysql
    app.kubernetes.io/name: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  namespace: database
spec:
  selector:
    app: mysql
    app.kubernetes.io/name: mysql
    readonly: "true"
  ports:
    - port: 3306
