mysql/mysql-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wordpress
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: mysql
      app.kubernetes.io/name: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [default, database]
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: [wordpress, mysql]
              - key: app.kubernetes.io/name
                operator: In
                values: [wordpress, mysql]
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 3307
